# House-Price-Prediction-API

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  render.yaml
.github/workflows/: ci.yml
app/: __init__.py  main.py
app/api/: dependencies.py  routes.py
app/core/: config.py  logging.py
app/ml/: train.py
app/schemas/: house.py
app/services/: model.py
scripts/: predict_example.py
tests/: conftest.py  test_api.py  test_model.py  test_schemas.py
