[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "house-price-api"
version = "1.0.0"
description = "Production-ready FastAPI service that predicts California housing prices."
readme = "README.md"
requires-python = "==3.14.3"
license = { text = "MIT" }
authors = [{ name = "Petra Omaku", email = "omaku.petra@gmail.com" }]
keywords = ["machine-learning", "fastapi", "mlops", "regression", "scikit-learn"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Framework :: FastAPI",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "scikit-learn>=1.5",
    "numpy>=1.26",
    "joblib>=1.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "ruff>=0.5",
    "black>=24.4",
    "mypy==2.1.0",
    "pre-commit>=3.7",
]

[project.urls]
Repository = "https://github.com/omaku-petra/house-price-api"

[project.scripts]
train-model = "app.ml.train:main"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra --strict-markers --cov=app --cov-report=term-missing"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
omit = ["app/ml/train.py"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["app", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "C4", "SIM", "RUF"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI's dependency-injection markers are intended as call-in-default-args.
extend-immutable-calls = ["fastapi.Depends", "fastapi.Query", "fastapi.Path"]

[tool.ruff.lint.per-file-ignores]
# Feature names mirror scikit-learn's California Housing dataset (mixedCase).
"app/schemas/house.py" = ["N815"]

[tool.ruff.lint.isort]
known-first-party = ["app", "tests"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.14.3"
strict = true
plugins = ["pydantic.mypy"]
ignore_missing_imports = true
